edited and added destinations

--- a/app.css
+++ b/app.css
@@ -46,10 +46,18 @@ h2 {
     text-shadow: 0 0 5px #01579b;
 }
 
-#florida {
+#fontainbleau {
     background-color: #03a9f4;
 }
 
-#paris {
+#yosemite {
     background-color: #d32f2f;
+}
+
+#bugaboos {
+    background-color: #3322dd;
+}
+
+#hampi {
+    background-color: tan;
 }
